@@ -46,7 +46,7 @@ BUILT_SOURCES = \
 	keyboard-dialog_glade.h
 
 keyboard-dialog_glade.h: keyboard-dialog.glade
-	exo-csource --static --name=keyboard_dialog_glade $< >$@
+	exo-csource --static --strip-comments --strip-content --name=keyboard_dialog_glade $< >$@
 
 endif
 
